# minecraft-vulkan

./: .gitignore  CMakeLists.txt  Makefile
.plan/: plan.txt  struct.txt
example/: example.cpp
include/core/: camera.h  config.h  vulkan_app.h  vulkan_buffer.h  vulkan_compute.h  vulkan_config.h  vulkan_descriptor.h  vulkan_device.h  vulkan_instance.h  vulkan_pipeline.h  vulkan_renderer.h  vulkan_swapchain.h  vulkan_texture.h  vulkan_tools.h
include/engine/: face_position.h  mesh.h  mesh_builder.h  sortable_mesh.h  texture_coord.h  texture_data.h  voxel_data.h  voxel_direction.h
include/graphics/: allocator.h  allocators_manager.h  app.h  block_update.h  buffer.h  buffer_manager.h  compute_pipeline.h  config.h  descriptor.h  device.h  graphic_pipeline.h  instance.h  light.h  renderer.h  swapchain.h  uniform_buffer.h  vertex.h
include/world/: chunk.h  chunk_manager.h  perlin_noise_2d.h  procedural_generator.h  voxel.h
res/shaders/: comp.glsl  comp.spv  frag.glsl  frag.spv  shader.comp  shader.comp.oldd  shader.vert  vert.glsl  vert.spv
src/: App.cpp  main.cpp
src/core/: camera.cpp  vulkan_app.cpp  vulkan_buffer.cpp  vulkan_compute.cpp  vulkan_descriptor.cpp  vulkan_device.cpp  vulkan_instance.cpp  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp
src/engine/: face_position.cpp  mesh.cpp  mesh_builder.cpp  sortable_mesh.cpp  texture_coord.cpp  texture_data.cpp  voxel_data.cpp
src/graphics/: allocator.cpp  allocators_manager.cpp  app.cpp  buffer.cpp  buffer_manager.cpp  compute_pipeline.cpp  descriptor.cpp  device.cpp  (+7 more)
(+31 files in other folders)
